# mdplab

./: .gitignore  README.md  clean  pyproject.toml  requirements-core.txt  requirements.txt
src/mdplab/: __init__.py  mdp.py
src/mdplab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: mdp_fixtures.py  test_import.py  test_mdp.py
